fix weird spacing between menu and hero banner

--- a/_sass/layout/_page-header.scss
+++ b/_sass/layout/_page-header.scss
@@ -61,7 +61,7 @@
 
   @include at-least(small) {
     padding-top: rem-calc(50);
-    padding-bottom: rem-calc(40);
+    padding-bottom: rem-calc(52);
   }
 }
 
