--- a/css/styles.css
+++ b/css/styles.css
@@ -473,7 +473,7 @@ pre {
   @media (min-width: 40.625rem) {
     .page-header > .wrapper {
       padding-top: 3.125rem;
-      padding-bottom: 2.5rem; } }
+      padding-bottom: 3.25rem; } }
 
 @media (min-width: 40.625rem) {
   .page-header.smaller > .wrapper {
@@ -698,15 +698,11 @@ pre {
 
 .site-nav__toggle > .t {
   top: 0.625rem;
-  transition-property: top, -webkit-transform;
-  transition-property: top, transform;
-  transition-property: top, transform, -webkit-transform; }
+  transition-property: top, transform; }
 
 .site-nav__toggle > .b {
   bottom: 0.625rem;
-  transition-property: bottom, -webkit-transform;
-  transition-property: bottom, transform;
-  transition-property: bottom, transform, -webkit-transform; }
+  transition-property: bottom, transform; }
 
 .smaller .site-nav__toggle > .m,
 .smaller .site-nav__toggle > .t,
@@ -724,13 +720,11 @@ pre {
 
 .site-nav__toggle.nav-open > .t {
   top: 1.1875rem;
-  -webkit-transform: rotate(45deg);
-          transform: rotate(45deg); }
+  transform: rotate(45deg); }
 
 .site-nav__toggle.nav-open > .b {
   bottom: 1.1875rem;
-  -webkit-transform: rotate(-45deg);
-          transform: rotate(-45deg); }
+  transform: rotate(-45deg); }
 
 .page-section {
   padding: 4.375rem 0; }
@@ -1017,24 +1011,19 @@ pre {
 
 @media (min-width: 35.9375rem) {
   .case-study-logos {
-    display: -webkit-inline-flex;
     display: -ms-inline-flexbox;
     display: inline-flex;
-    -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center; } }
+    -ms-flex-direction: row;
+        flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: center;
+        justify-content: center; } }
 
 @media (min-width: 40.625rem) {
   .case-study-logos {
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between; } }
+    -ms-flex-pack: justify;
+        justify-content: space-between; } }
 
 .case-study-logos .case-study {
   padding: 0 2.5rem 2.5rem;
@@ -1053,25 +1042,20 @@ pre {
 
 @media (min-width: 40.625rem) {
   .circles-list {
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-    -webkit-justify-content: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-direction: row;
+        flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: center;
+        justify-content: center;
     margin-bottom: 2.5rem; } }
 
 @media (min-width: 62rem) {
   .circles-list {
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between; } }
+    -ms-flex-pack: justify;
+        justify-content: space-between; } }
 
 .circles-list__item {
   display: table;
@@ -1121,18 +1105,14 @@ pre {
   margin-bottom: 1.25rem; }
   @media (min-width: 40.625rem) {
     .integrations-list {
-      display: -webkit-flex;
       display: -ms-flexbox;
       display: flex;
-      -webkit-flex-direction: row;
-          -ms-flex-direction: row;
-              flex-direction: row;
-      -webkit-flex-wrap: wrap;
-          -ms-flex-wrap: wrap;
-              flex-wrap: wrap;
-      -webkit-justify-content: center;
-          -ms-flex-pack: center;
-              justify-content: center; } }
+      -ms-flex-direction: row;
+          flex-direction: row;
+      -ms-flex-wrap: wrap;
+          flex-wrap: wrap;
+      -ms-flex-pack: center;
+          justify-content: center; } }
 
 .integrations-list__item {
   padding: 1.25rem;
@@ -1193,10 +1173,10 @@ pre {
 
 .page {
   position: relative;
-  padding-top: 6.3125rem; }
+  padding-top: 5.75rem; }
   @media (min-width: 40.625rem) {
     .page {
-      padding-top: 12.375rem; } }
+      padding-top: 11.5rem; } }
   .page:before {
     display: block;
     position: absolute;
